Probable bug in (regular) Path tracing method #42212

Closed
opened 2014-10-13 20:39:57 +02:00 by Lsscpp · 9 comments

System Information
Windows 7 - Geforce GTX760

Blender Version
Broken: 2.72 95182d1 (official 2.72)

Short description of error
Rendering with regular path tracing method (no branchedPT) and using a "sharp" glossy shader I get reflections in the diffuse passes, both direct and indirect. Can't think that is intended ;)

Exact steps for others to reproduce the error
Open the file render then switch to the other method and render in another slot. Then compare the passes output{F116492}

Hope the report is ok, bye!

**System Information** Windows 7 - Geforce GTX760 **Blender Version** Broken: 2.72 95182d1 (official 2.72) **Short description of error** Rendering with regular path tracing method (no branchedPT) and using a "sharp" glossy shader I get reflections in the diffuse passes, both direct and indirect. Can't think that is intended ;) **Exact steps for others to reproduce the error** Open the file render then switch to the other method and render in another slot. Then compare the passes output{[F116492](https://archive.blender.org/developer/F116492/diffuse_pass_bug.blend)} Hope the report is ok, bye!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lsscpp

Added subscriber: @lsscpp
Author

Sorry, I forgot to mention, the behavior is both in GPU and CPU rendering

Sorry, I forgot to mention, the behavior is both in GPU and CPU rendering
Sergey Sharybin self-assigned this 2014-10-14 09:39:35 +02:00
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Member

Can confirm it here, but only when the glossy is being mixed/added with a diffuse shader. Without a diffuse shader, it works fine.

Can confirm it here, but only when the glossy is being mixed/added with a diffuse shader. Without a diffuse shader, it works fine.

This issue was referenced by a1f4821b94

This issue was referenced by a1f4821b94b09572d1606e4268b88e62bd5dd1e7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a1f4821b94.

Closed by commit a1f4821b94.

This issue was referenced by blender/cycles@8abb32785c

This issue was referenced by blender/cycles@8abb32785c1ad42589494306bd66fa386d71d1d5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42212
No description provided.